--- a/FizzBuzz.Tests/FizzBuzz.Tests.csproj
+++ b/FizzBuzz.Tests/FizzBuzz.Tests.csproj
@@ -18,6 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FizzBuzz.Console\FizzBuzz.Console.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="NUnit.Framework" />
   </ItemGroup>
 
